<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.epam.tc</groupId>
    <artifactId>Ekaterina_Khudzhamkulova</artifactId>
    <version>2021.08.02-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <testng.configs.path>${project.build.testOutputDirectory}/testng</testng.configs.path>
        <testng.suite.file>${testng.configs.path}/defaultTests.xml</testng.suite.file>

        <checkstyle.version>8.44</checkstyle.version>
        <testng.version>7.4.0</testng.version>
        <assertj-core.version>3.20.2</assertj-core.version>
        <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>
        <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
        <selenium-java.version>3.141.59</selenium-java.version>
        <webdrivermanager.version>4.4.3</webdrivermanager.version>
        <allure-testng.version>2.14.0</allure-testng.version>
        <aspectj.version>1.9.5</aspectj.version>
        <slf4j.version>2.0.0-alpha4</slf4j.version>
        <jdi-light-html.version>1.3.13</jdi-light-html.version>
    </properties>

    <build>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>3.1.2</version>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>${checkstyle.version}</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <configLocation>
                        <!--  pay attention to use exact url for checkstyle plugin ruleset  -->
                        https://raw.githubusercontent.com/DmitryKhodakovsky/epam-training-center-code-checkers-configurations/main/checkstyle/checkstyle.xml
                    </configLocation>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
                    <consoleOutput>true</consoleOutput>
                    <failsOnError>true</failsOnError>
                    <linkXRef>false</linkXRef>
                </configuration>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                    </argLine>
                    <suiteXmlFiles>
                        <suiteXmlFile>${testng.suite.file}</suiteXmlFile>
                    </suiteXmlFiles>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjweaver</artifactId>
                        <version>${aspectj.version}</version>
                    </dependency>
                </dependencies>
            </plugin>

        </plugins>
    </build>

    <profiles>

        <profile>
            <id>default-operations-profile</id>
            <!--
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            -->
            <properties>
                <testng.suite.file>${testng.configs.path}/defaultTests.xml</testng.suite.file>
            </properties>
        </profile>

        <profile>
            <id>all-operations-profile</id>
            <properties>
                <testng.suite.file>${testng.configs.path}/AllTests.xml</testng.suite.file>
            </properties>
        </profile>

        <profile>
            <id>multiply-divide-operations-profile</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <properties>
                <testng.suite.file>${testng.configs.path}/multiplyDivideTests.xml</testng.suite.file>
            </properties>
        </profile>

        <profile>
            <id>ex1Ex2HW2Profile</id>
            <properties>
                <testng.suite.file>${testng.configs.path}/ex1Ex2HW2.xml</testng.suite.file>
            </properties>
        </profile>

        <profile>
            <id>ex1Ex2HW3Profile</id>
            <properties>
                <testng.suite.file>${testng.configs.path}/ex1Ex2HW3.xml</testng.suite.file>
            </properties>
        </profile>

        <profile>
            <id>ex1Ex2HW4Profile</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <properties>
                <testng.suite.file>${testng.configs.path}/ex1Ex2HW4.xml</testng.suite.file>
            </properties>
        </profile>

        <profile>
            <id>ex1Ex2HW6Profile</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <testng.suite.file>${testng.configs.path}/ex1Ex2HW6.xml</testng.suite.file>
            </properties>
        </profile>

        <profile>
            <id>HW8JDIProfile</id>
            <properties>
                <testng.suite.file>${testng.configs.path}/jdiTests.xml</testng.suite.file>
            </properties>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>

    </profiles>

    <dependencies>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj-core.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>calculator-1.0</groupId>
            <artifactId>calculator-1.0</artifactId>
            <scope>system</scope>
            <version>1.0</version>
            <systemPath>${basedir}/src/lib/calculator-1.0.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${selenium-java.version}</version>
        </dependency>

        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>${webdrivermanager.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-testng</artifactId>
            <version>${allure-testng.version}</version>
            <scope>test</scope>
        </dependency>

      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>RELEASE</version>
        <scope>test</scope>
      </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>

        <dependency>
            <groupId>com.epam.jdi</groupId>
            <artifactId>jdi-light-html</artifactId>
            <version>${jdi-light-html.version}</version>
        </dependency>
    </dependencies>

    <reporting>
        <excludeDefaults>true</excludeDefaults>
        <plugins>
            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>2.10.0</version>
                <configuration>
                    <reportVersion>${allure-testng.version}</reportVersion>
                </configuration>
            </plugin>
        </plugins>
    </reporting>
</project>